@@ -237,3 +237,4 @@ T_388split_parts_and_chapters:e1bc3ec155ec33bca8eec967aceab25a-389c3bd6f8eca14fe
 T_389mpeg1_in_ps_misdetected_as_avc:5ee2d016952f533fb028364ca45c41ef:passed:20130224-132738:1.205560654
 T_390timecode_info_on_resync:ok+ok:passed:20130318-185621:0.115461517
 T_391fix_bitstream_frame_rate:ad0a8bb759ad2c7e82c274e864171abe:passed:20130329-114522:0.460370742
+T_392avi_audio_chunk_size_0:fb73c5292f35250371b95877c7994103:passed:20130331-134751:0.893777097
