@@ -1,0 +1,5 @@
+#!/usr/bin/ruby -w
+
+# T_392avi_audio_chunk_size_0
+describe "mkvmerge / reading AVIs with audio chunk size 0"
+test_merge "data/avi/audio-chunk-size-0.avi"
